--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tjmun-website",
   "version": "1.0.0",
   "private": true,
+  "eslint": {
+    "ignoreDuringBuilds": true
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -32,6 +35,7 @@
     "react-hook-form": "^7.52.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -48,4 +52,3 @@
     "typescript": "^5.5.4"
   }
 }
-
